syntax = "proto3";

// Authentication service.
service Auth {
  // Authentication request for a user.
  rpc Login (LoginRequest) returns (LoginResponse);
  // User registration request.
  rpc Register (RegisterRequest) returns (RegisterResponse);
  // Cross-service JWT validation.
  rpc Validate (ValidateRequest) returns (ValidateResponse);
}

message LoginRequest {
  string user = 1;
  string pwd = 2;
}

message LoginResponse {
  string jwt = 1;
}

message RegisterRequest {
  string user = 1;
  string pwd = 2;
}

message RegisterResponse {
  string result = 1;
}

message ValidateRequest {
  string jwt = 1;
}

message ValidateResponse {
  bool result = 1;
}
