import {
  AuthServiceImplementation,
  LoginRequest,
  LoginResponse,
  RegisterRequest,
  RegisterResponse,
  ValidateRequest,
  ValidateResponse,
  DeepPartial,
} from '../../proto/compiled_proto/auth.js';

/**
 * Implementation of gRPC auth service.
 */
export const authServiceImpl: AuthServiceImplementation = {

  async login(
    request: LoginRequest,
  ): Promise<DeepPartial<LoginResponse>> {
    
    // Unimplemented
    const response: LoginResponse = {
      jwt: "",
    };

    return response;
  },

  async register(
    request: RegisterRequest,
  ): Promise<DeepPartial<RegisterResponse>> {
    // Unimplemented
    const response: RegisterResponse = {
      result: 'Unimplemented register request handler!'
    };

    return response;
  },

  async validate(
    request: ValidateRequest,
  ): Promise<DeepPartial<ValidateResponse>> {
    const response: ValidateResponse = {
      result: true
    };

    return response;
  },
};
